--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/net10.0/VoiceByAuribus-API.dll",
+            "program": "${workspaceFolder}/VoiceByAuribus.API/bin/Debug/net10.0/VoiceByAuribus-API.dll",
             "args": [],
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/VoiceByAuribus.API",
             "stopAtEntry": false,
             "serverReadyAction": {
                 "action": "openExternally",
