--- a/VoiceByAuribus.API/VoiceByAuribus-API.csproj
+++ b/VoiceByAuribus.API/VoiceByAuribus-API.csproj
@@ -9,16 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-  <PackageReference Include="AWSSDK.S3" Version="4.0.0" />
+  <PackageReference Include="AWSSDK.S3" Version="4.0.11.1" />
   <PackageReference Include="AWSSDK.SQS" Version="4.0.2.2" />
-  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0-rc.2.25502.107" />
-  <PackageReference Include="Asp.Versioning.Mvc" Version="7.1.0" />
-  <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="7.1.0" />
-  <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.3" />
+  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+  <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
+  <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+  <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.3.11" />
   <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0-rc.2.25502.107" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0-rc.2.25502.107" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-rc.2.25502.107">
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
