feat: add Docker launch and build configurations for debugging and release

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,6 +40,66 @@
 				"${workspaceFolder}/VoiceByAuribus.API/VoiceByAuribus-API.csproj"
 			],
 			"problemMatcher": "$msCompile"
+		},
+		{
+			"type": "docker-build",
+			"label": "docker-build: debug",
+			"dependsOn": [
+				"build"
+			],
+			"dockerBuild": {
+				"tag": "voicebyauribusapi:dev",
+				"target": "base",
+				"dockerfile": "${workspaceFolder}/VoiceByAuribus.API/Dockerfile",
+				"context": "${workspaceFolder}",
+				"pull": true
+			},
+			"netCore": {
+				"appProject": "${workspaceFolder}/VoiceByAuribus.API/VoiceByAuribus-API.csproj"
+			}
+		},
+		{
+			"type": "docker-build",
+			"label": "docker-build: release",
+			"dependsOn": [
+				"build"
+			],
+			"dockerBuild": {
+				"tag": "voicebyauribusapi:latest",
+				"dockerfile": "${workspaceFolder}/VoiceByAuribus.API/Dockerfile",
+				"context": "${workspaceFolder}",
+				"platform": {
+					"os": "linux",
+					"architecture": "amd64"
+				},
+				"pull": true
+			},
+			"netCore": {
+				"appProject": "${workspaceFolder}/VoiceByAuribus.API/VoiceByAuribus-API.csproj"
+			}
+		},
+		{
+			"type": "docker-run",
+			"label": "docker-run: debug",
+			"dependsOn": [
+				"docker-build: debug"
+			],
+			"dockerRun": {},
+			"netCore": {
+				"appProject": "${workspaceFolder}/VoiceByAuribus.API/VoiceByAuribus-API.csproj",
+				"enableDebugging": true
+			}
+		},
+		{
+			"type": "docker-run",
+			"label": "docker-run: release",
+			"dependsOn": [
+				"docker-build: release"
+			],
+			"dockerRun": {},
+			"netCore": {
+				"appProject": "${workspaceFolder}/VoiceByAuribus.API/VoiceByAuribus-API.csproj"
+			}
 		}
 	]
 }
