--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,15 @@
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
+        },
+        {
+            "name": "Containers: .NET Launch",
+            "type": "docker",
+            "request": "launch",
+            "preLaunchTask": "docker-run: debug",
+            "netCore": {
+                "appProject": "${workspaceFolder}/VoiceByAuribus.API/VoiceByAuribus-API.csproj"
+            }
         }
     ]
 }
