Add GitHub Actions for AMD64 builds and improve startup logging

--- a/VoiceByAuribus.API/VoiceByAuribus-API.csproj
+++ b/VoiceByAuribus.API/VoiceByAuribus-API.csproj
@@ -18,8 +18,8 @@
   <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.3.11" />
   <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0-rc.2.25502.107" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0-rc.2.25502.107">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
