Fix health checks to use specific bucket and queue operations from configuration

--- a/VoiceByAuribus.API/appsettings.json
+++ b/VoiceByAuribus.API/appsettings.json
@@ -13,12 +13,13 @@
     "Region": "us-east-1",
     "Profile": "default",
     "S3": {
-      "AudioFilesBucket": "voice-by-auribus-audio-files",
+      "AudioFilesBucket": "voice-by-auribus-api",
       "UploadUrlExpirationMinutes": 30,
       "MaxFileSizeMB": 100
     },
     "SQS": {
-      "AudioPreprocessingQueueUrl": "https://sqs.us-east-1.amazonaws.com/YOUR_ACCOUNT_ID/audio-preprocessing-queue"
+      "AudioPreprocessingQueueUrl": "https://sqs.us-east-1.amazonaws.com/YOUR_ACCOUNT_ID/audio-preprocessing-queue",
+      "AudioPreprocessingQueue": "aurivoice-svs-prep-nbl.fifo"
     }
   },
   "Webhooks": {
