feat: replace default logging configuration with Serilog for enhanced logging capabilities

--- a/VoiceByAuribus.API/appsettings.Development.json
+++ b/VoiceByAuribus.API/appsettings.Development.json
@@ -1,9 +1,21 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft.AspNetCore": "Information",
+        "Microsoft.EntityFrameworkCore": "Information",
+        "System.Net.Http.HttpClient": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {SourceContext}{NewLine}{Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=voice_by_auribus_api_db;Username=voice_by_auribus_api_user;Password=voice_by_auribus_api_password"
