feat: Add VoiceConversions feature with migrations and configurations
- Implemented VoiceConversions feature including database migrations for voice conversions.
- Added RowVersion for concurrency control in VoiceConversions.
- Introduced UsePreview flag in VoiceConversions for optional preview processing.
- Updated ApplicationDbContext to include VoiceConversions DbSet.
- Configured VoiceConversion entity with necessary properties and relationships.
- Enhanced SqsService to support sending messages with deduplication ID and message group ID for FIFO queues.
- Updated appsettings.json to include new SQS queue URLs for voice inference and preview inference.

--- a/VoiceByAuribus.API/appsettings.json
+++ b/VoiceByAuribus.API/appsettings.json
@@ -36,7 +36,9 @@
     },
     "SQS": {
       "AudioPreprocessingQueueUrl": "https://sqs.us-east-1.amazonaws.com/YOUR_ACCOUNT_ID/audio-preprocessing-queue",
-      "AudioPreprocessingQueue": "aurivoice-svs-prep-nbl.fifo"
+      "AudioPreprocessingQueue": "aurivoice-svs-prep-nbl.fifo",
+      "VoiceInferenceQueueUrl": "https://sqs.us-east-1.amazonaws.com/YOUR_ACCOUNT_ID/voice-inference-queue",
+      "PreviewInferenceQueueUrl": "https://sqs.us-east-1.amazonaws.com/YOUR_ACCOUNT_ID/preview-inference-queue"
     }
   },
   "Webhooks": {
