feat: Enhance voice conversion processing and health monitoring
- Updated IVoiceConversionService to return processed and skipped counts in ProcessPendingConversionsAsync.
- Modified VoiceConversionService to support cancellation tokens and improved SQS queue URL resolution with caching.
- Added SqsQueueResolver for efficient SQS queue URL retrieval.
- Implemented health check service for background services, including metrics for processed and skipped conversions.
- Introduced BackgroundServiceHealthStatus DTO for health reporting.
- Updated global exception handler to include trace identifiers in error responses.
- Added CORS configuration options in appsettings for future frontend integration.
- Optimized database indexing for voice conversions to improve query performance.
- Refactored VoiceConversionsController and VoiceConversionsWebhookController for cleaner logging.
- Added sanitization for S3 filenames to prevent issues with special characters.

--- a/VoiceByAuribus.API/appsettings.Development.json
+++ b/VoiceByAuribus.API/appsettings.Development.json
@@ -30,5 +30,17 @@
       "UserPoolId": "us-east-1_2GQIgX9Vw",
       "Audience": "voice-by-auribus-api"
     }
+  },
+  "Cors": {
+    "Enabled": false,
+    "AllowedOrigins": []
+  },
+  "VoiceConversions": {
+    "BackgroundProcessor": {
+      "IntervalSeconds": 3,
+      "BatchTimeoutSeconds": 30,
+      "MaxRetryAttempts": 5,
+      "RetryDelayMinutes": 5
+    }
   }
 }
