--- a/VoiceByAuribus.API/appsettings.json
+++ b/VoiceByAuribus.API/appsettings.json
@@ -35,10 +35,9 @@
       "MaxFileSizeMB": 100
     },
     "SQS": {
-      "AudioPreprocessingQueueUrl": "https://sqs.us-east-1.amazonaws.com/YOUR_ACCOUNT_ID/audio-preprocessing-queue",
       "AudioPreprocessingQueue": "aurivoice-svs-prep-nbl.fifo",
-      "VoiceInferenceQueueUrl": "https://sqs.us-east-1.amazonaws.com/YOUR_ACCOUNT_ID/voice-inference-queue",
-      "PreviewInferenceQueueUrl": "https://sqs.us-east-1.amazonaws.com/YOUR_ACCOUNT_ID/preview-inference-queue"
+      "VoiceInferenceQueue": "voice-inference-queue",
+      "PreviewInferenceQueue": "preview-inference-queue"
     }
   },
   "Webhooks": {
@@ -49,6 +48,18 @@
       "Region": "us-east-1",
       "UserPoolId": "us-east-1_2GQIgX9Vw",
       "Audience": "voice-by-auribus-api"
+    }
+  },
+  "Cors": {
+    "Enabled": false,
+    "AllowedOrigins": []
+  },
+  "VoiceConversions": {
+    "BackgroundProcessor": {
+      "IntervalSeconds": 3,
+      "BatchTimeoutSeconds": 30,
+      "MaxRetryAttempts": 5,
+      "RetryDelayMinutes": 5
     }
   }
 }
