fix: Add dotnet restore before applying migrations in deploy workflow
- Add 'Restore NuGet Packages' step before 'Apply Migrations'
- Fixes NETSDK1004 error: Assets file project.assets.json not found
- Update workflow documentation with new step
- Add troubleshooting section for assets file error

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -62,6 +62,11 @@ jobs:
           dotnet tool install --global dotnet-ef
           echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
       
+      - name: Restore NuGet Packages
+        run: |
+          echo "📦 Restaurando paquetes NuGet..."
+          dotnet restore VoiceByAuribus.API/VoiceByAuribus-API.csproj
+      
       - name: Apply Migrations
         run: |
           echo "📦 Aplicando migraciones a base de datos de producción..."
