fix: Update deployment triggers to include specific file changes for production

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -2,10 +2,18 @@ name: Deploy to Production
 
 on:
   push:
-    branches: 
+    branches:
       - main
       - test
-  workflow_dispatch:  # Permite ejecutar manualmente desde GitHub UI (con validación de rama)
+    paths:
+      # Only trigger deployment when VoiceByAuribus.API files change
+      - 'VoiceByAuribus.API/**'
+      - '.github/workflows/deploy-production.yml'
+      - '.github/workflows/build-and-push.yml'
+      - 'VoiceByAuribus-API.sln'
+      - 'Dockerfile'
+      - 'global.json'
+  workflow_dispatch:  # Allow manual triggering from GitHub UI
 
 # Prevent concurrent deployments to avoid migration lock conflicts
 concurrency:
