--- a/.github/workflows/deploy-audio-notifier-lambda.yml
+++ b/.github/workflows/deploy-audio-notifier-lambda.yml
@@ -176,20 +176,32 @@ jobs:
           echo "$USER_ARN"
           echo ""
 
-          # Extract user name from ARN
-          USER_NAME=$(echo "$USER_ARN" | awk -F'/' '{print $NF}')
-          echo "IAM User Name: $USER_NAME"
-          echo ""
-
-          echo "Attached Policies:"
-          aws iam list-attached-user-policies --user-name "$USER_NAME" --output table
-          echo ""
-
+          echo "=========================================="
           echo "Testing Lambda permissions..."
+          echo "=========================================="
+          echo "Function: ${{ env.FUNCTION_NAME }}"
+          echo "Region: ${{ env.AWS_REGION }}"
+          echo ""
           echo "Attempting to call get-function-configuration..."
-          aws lambda get-function-configuration \
+          echo ""
+
+          if aws lambda get-function-configuration \
             --function-name ${{ env.FUNCTION_NAME }} \
-            --region ${{ env.AWS_REGION }} 2>&1 || true
+            --region ${{ env.AWS_REGION }} 2>&1; then
+            echo ""
+            echo "✅ SUCCESS: Can access Lambda function"
+          else
+            echo ""
+            echo "❌ FAILED: Cannot access Lambda function"
+            echo ""
+            echo "Expected resource ARN:"
+            echo "  arn:aws:lambda:${{ env.AWS_REGION }}:265584593347:function:${{ env.FUNCTION_NAME }}"
+            echo ""
+            echo "This usually means:"
+            echo "  1. The IAM policy doesn't include this function ARN in the Resource list"
+            echo "  2. The policy version is not set as default"
+            echo "  3. IAM policy changes haven't propagated yet (can take up to 5 minutes)"
+          fi
           echo ""
 
       # ========================================================================
