feat: Add Webhook Subscription and Delivery Log features
- Implemented WebhookDeliveryLog and WebhookSubscription entities with configurations.
- Added migrations for RowVersion and ProcessingStatus to WebhookDeliveryLogs.
- Introduced WebhookEventTypes and WebhookEntityTypes for standard event and entity types.
- Integrated EncryptionService for secure data handling using AES-256-GCM.
- Updated ApplicationDbContext to include new DbSets for webhook features.
- Enhanced appsettings.json with webhook configuration options.
- Registered WebhookSubscriptions feature in Program.cs.

--- a/VoiceByAuribus.API/appsettings.json
+++ b/VoiceByAuribus.API/appsettings.json
@@ -41,7 +41,16 @@
     }
   },
   "Webhooks": {
-    "ApiKey": "CHANGE_THIS_IN_PRODUCTION_TO_SECURE_VALUE"
+    "ApiKey": "CHANGE_THIS_IN_PRODUCTION_TO_SECURE_VALUE",
+    "BackgroundProcessor": {
+      "IntervalSeconds": 5,
+      "BatchSize": 20,
+      "ProcessingTimeoutMinutes": 5
+    },
+    "Client": {
+      "MaxRetryAttempts": 5,
+      "MaxSubscriptionsPerUser": 5
+    }
   },
   "Authentication": {
     "Cognito": {
