--- a/VoiceByAuribus.API/VoiceByAuribus-API.csproj
+++ b/VoiceByAuribus.API/VoiceByAuribus-API.csproj
@@ -12,6 +12,7 @@
   <PackageReference Include="AWSSDK.S3" Version="4.0.11.1" />
   <PackageReference Include="AWSSDK.SQS" Version="4.0.2.2" />
   <PackageReference Include="AWSSDK.SecretsManager" Version="4.0.2.2" />
+  <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
   <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
   <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
