--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -126,55 +126,67 @@ jobs:
         id: check-migrations
         run: |
           echo "🔍 Verificando si hay migraciones pendientes..."
-
-          # Listar todas las migraciones y buscar las pendientes
-          MIGRATIONS_OUTPUT=$(dotnet ef migrations list \
+          
+          # Obtener lista de migraciones en el código
+          echo "📋 Migraciones en el código:"
+          CODE_MIGRATIONS=$(dotnet ef migrations list \
+            --project VoiceByAuribus.API/VoiceByAuribus-API.csproj \
+            --no-build \
+            --no-connect 2>&1)
+          
+          echo "$CODE_MIGRATIONS"
+          CODE_COUNT=$(echo "$CODE_MIGRATIONS" | grep -E '^[0-9]{14}_' | wc -l | tr -d ' ')
+          
+          echo ""
+          echo "🔗 Consultando base de datos..."
+          echo "   Migraciones en código: $CODE_COUNT"
+          
+          # Ejecutar database update en modo script (SQL) para ver qué haría
+          # Sin --script solo vemos verbose output
+          UPDATE_OUTPUT=$(dotnet ef database update \
             --project VoiceByAuribus.API/VoiceByAuribus-API.csproj \
             --connection "${{ env.DB_CONNECTION }};Command Timeout=60" \
-            --no-build 2>&1 || true)
-
-          echo "$MIGRATIONS_OUTPUT"
-
-          # Verificar si hay migraciones pendientes
-          if echo "$MIGRATIONS_OUTPUT" | grep -qi "pending\|not applied"; then
+            --no-build \
+            --verbose 2>&1 || echo "UPDATE_FAILED")
+          
+          echo "$UPDATE_OUTPUT"
+          
+          # Analizar output para detectar si aplicó migraciones
+          # EF Core muestra "Applying migration" cuando aplica algo
+          # O "No migrations were applied" / "database is already up to date"
+          if echo "$UPDATE_OUTPUT" | grep -qi "Applying migration\|Executed DbCommand"; then
+            # Aplicó migraciones - significa que SÍ había pendientes
+            echo ""
+            echo "⚠️  DETECTADAS Y APLICADAS migraciones pendientes"
             echo "HAS_PENDING=true" >> $GITHUB_OUTPUT
-            echo "⚠️  Se encontraron migraciones pendientes"
-          else
-            echo "HAS_PENDING=false" >> $GITHUB_OUTPUT
+            
+            # Contar cuántas aplicó
+            APPLIED=$(echo "$UPDATE_OUTPUT" | grep -c "Applying migration" || echo "unknown")
+            echo "   Migraciones aplicadas: $APPLIED"
+          elif echo "$UPDATE_OUTPUT" | grep -qi "No migrations were applied\|already.*up.*to.*date\|No pending model changes"; then
+            # No aplicó nada - BD actualizada
+            echo ""
             echo "✅ No hay migraciones pendientes - la base de datos está actualizada"
+            echo "HAS_PENDING=false" >> $GITHUB_OUTPUT
+          elif echo "$UPDATE_OUTPUT" | grep -qi "UPDATE_FAILED\|error\|exception"; then
+            # Hubo error - ser conservador y asumir que hay pendientes
+            echo ""
+            echo "❌ Error al verificar migraciones - se asumirá que hay pendientes"
+            echo "HAS_PENDING=true" >> $GITHUB_OUTPUT
+          else
+            # Output no claro - ser conservador
+            echo ""
+            echo "⚠️  No se pudo determinar el estado - se asumirá que hay pendientes"
+            echo "HAS_PENDING=true" >> $GITHUB_OUTPUT
           fi
 
-      - name: Apply Migrations
+      - name: Verify Migrations Applied
         if: steps.check-migrations.outputs.HAS_PENDING == 'true'
         run: |
-          echo "📦 Aplicando migraciones a base de datos de ${{ env.ASPNETCORE_ENVIRONMENT }}..."
+          echo "✅ Migraciones verificadas y aplicadas en el paso anterior"
+          echo "   El comando 'database update' ya aplicó los cambios necesarios"
 
-          MAX_RETRIES=3
-          RETRY=0
-          SUCCESS=false
-
-          while [ $RETRY -lt $MAX_RETRIES ] && [ "$SUCCESS" = "false" ]; do
-            if [ $RETRY -gt 0 ]; then
-              echo "⚠️  Retry attempt $RETRY/$MAX_RETRIES after waiting 30 seconds..."
-              sleep 30
-            fi
-
-            if dotnet ef database update \
-              --project VoiceByAuribus.API/VoiceByAuribus-API.csproj \
-              --connection "${{ env.DB_CONNECTION }};Command Timeout=60" \
-              --verbose; then
-              SUCCESS=true
-              echo "✅ Migraciones aplicadas exitosamente"
-            else
-              RETRY=$((RETRY + 1))
-              if [ $RETRY -eq $MAX_RETRIES ]; then
-                echo "❌ Error aplicando migraciones después de $MAX_RETRIES intentos"
-                exit 1
-              fi
-            fi
-          done
-
-      - name: Skip Migrations
+      - name: Skip Migrations (Already Applied)
         if: steps.check-migrations.outputs.HAS_PENDING == 'false'
         run: |
           echo "ℹ️  No hay migraciones para aplicar. Continuando con el deployment..."
