--- a/VoiceByAuribus.API/appsettings.json
+++ b/VoiceByAuribus.API/appsettings.json
@@ -36,6 +36,8 @@
     },
     "SQS": {
       "AudioPreprocessingQueue": "aurivoice-svs-prep-nbl.fifo",
+      "PreprocessingCallbackUrl": "https://prmhyprzvk.us-east-1.awsapprunner.com/api/v1/audio-files/webhooks/preprocessing-result",
+      "PreprocessingCallbackType": "HTTP",
       "VoiceInferenceQueue": "voice-inference-queue",
       "PreviewInferenceQueue": "preview-inference-queue"
     }
