feat: Update voice conversion API and webhook handling with new request and response schemas

--- a/VoiceByAuribus.API/appsettings.json
+++ b/VoiceByAuribus.API/appsettings.json
@@ -39,7 +39,9 @@
       "PreprocessingCallbackUrl": "https://prmhyprzvk.us-east-1.awsapprunner.com/api/v1/audio-files/webhooks/preprocessing-result",
       "PreprocessingCallbackType": "HTTP",
       "VoiceInferenceQueue": "voice-inference-queue",
-      "PreviewInferenceQueue": "preview-inference-queue"
+      "PreviewInferenceQueue": "preview-inference-queue",
+      "VoiceConversionCallbackUrl": "https://prmhyprzvk.us-east-1.awsapprunner.com/api/v1/voice-conversions/webhooks/conversion-result",
+      "VoiceConversionCallbackType": "HTTP"
     }
   },
   "Webhooks": {
