--- a/VoiceByAuribus.API/appsettings.json
+++ b/VoiceByAuribus.API/appsettings.json
@@ -38,8 +38,9 @@
       "AudioPreprocessingQueue": "aurivoice-svs-prep-nbl.fifo",
       "PreprocessingCallbackUrl": "https://prmhyprzvk.us-east-1.awsapprunner.com/api/v1/audio-files/webhooks/preprocessing-result",
       "PreprocessingCallbackType": "HTTP",
-      "VoiceInferenceQueue": "voice-inference-queue",
-      "PreviewInferenceQueue": "preview-inference-queue",
+      "PreviewInferenceQueue": "voice-by-auribus-inference-paid-preview",
+      "MainInferenceQueue": "voice-by-auribus-inference-paid-main",
+      "AltInferenceQueue": "voice-by-auribus-inference-paid-alt",
       "VoiceConversionCallbackUrl": "https://prmhyprzvk.us-east-1.awsapprunner.com/api/v1/voice-conversions/webhooks/conversion-result",
       "VoiceConversionCallbackType": "HTTP"
     }
