--- a/VoiceByAuribus.API/appsettings.json
+++ b/VoiceByAuribus.API/appsettings.json
@@ -35,7 +35,7 @@
       "MaxFileSizeMB": 100
     },
     "SQS": {
-      "AudioPreprocessingQueue": "aurivoice-svs-prep-nbl.fifo",
+      "AudioPreprocessingQueue": "voice-by-auribus-preprocessing.fifo",
       "PreprocessingCallbackUrl": "https://prmhyprzvk.us-east-1.awsapprunner.com/api/v1/audio-files/webhooks/preprocessing-result",
       "PreprocessingCallbackType": "HTTP",
       "PreviewInferenceQueue": "voice-by-auribus-inference-paid-preview",
